body almost complete

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         </div>
         <div class="right">
           <form action="">
-            <input type="text" placeholder="Email address or phone number">
-            <input type="password" placeholder="password">
-            <button>Log in</button>
-            <a href="#">Forgot password ?</a>
+            <input type="text" placeholder="Email address or phone number" class="form-cnt">
+            <input type="password" placeholder="password" class="form-cnt">
+            <button class="form-cnt log-in-btn">Log in</button>
+            <a href="#" class="forgot-txt">Forgotten password ?</a>
             <hr>
-            <button>Create new account</button>
+            <button class="create-btn">Create new account</button>
           </form>
-          <p><a href="#">Create a page</a>for a celebrity, brand or buisness.</p>
+          <p class="sign-up-txt"><a href="#" class="create-acc">Create a page </a>for a celebrity, brand or buisness.</p>
         </div>
       </div>
       <div class="footer"></div>
