body full completed ,footer need to correct

--- a/index.html
+++ b/index.html
@@ -4,34 +4,68 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Facebook - login or sign up</title>
-    <link rel="icon" href="./resource/fb-icon.png" type="image/png">
+    <link rel="icon" href="https://www.facebook.com/images/fb_icon_325x325.png"/>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div class="container">
       <div class="body-container">
         <div class="left">
-          <p class="logo space  ">facebook</p>
-          <div class="para"><p class="logo-txt space">Facebook helps you connect and share with the people in your life.</p></div>
+          <p class="logo space">facebook</p>
+          <div class="para">
+            <p class="logo-txt space">
+              Facebook helps you connect and share with the people in your life.
+            </p>
+          </div>
         </div>
         <div class="right">
           <form action="">
-            <input type="text" placeholder="Email address or phone number" class="form-cnt">
-            <input type="password" placeholder="password" class="form-cnt">
+            <input
+              type="text"
+              placeholder="Email address or phone number"
+              class="form-cnt"
+            />
+            <input type="password" placeholder="password" class="form-cnt" />
             <button class="form-cnt log-in-btn">Log in</button>
             <a href="#" class="forgot-txt">Forgotten password ?</a>
-            <hr>
+            <hr />
             <button class="create-btn">Create new account</button>
           </form>
-          <p class="sign-up-txt"><a href="#" class="create-acc">Create a page </a>for a celebrity, brand or buisness.</p>
+          <p class="sign-up-txt">
+            <a href="#" class="create-acc">Create a page </a>for a celebrity,
+            brand or buisness.
+          </p>
         </div>
       </div>
-      <div class="footer"></div>
+      <footer>
+        <div class="footer-container">
+          <p>English (UK) 
+            മലയാളം 
+            தமிழ் 
+            ಕನ್ನಡ 
+            हिन्दी 
+            اردو 
+            বাংলা 
+            తెలుగు 
+            Español 
+            Português (Brasil) 
+            Français (France) 
+            </p><hr>
+            <p>Sign UpLog inMessengerFacebook LiteVideoPlacesGamesMarketplaceMeta PayMeta StoreMeta QuestRay-Ban MetaMeta AI</p>
+            <p>InstagramThreadsFundraisersServicesVoting Information CentrePrivacy PolicyPrivacy CentreGroupsAboutCreate adCreate PageDevelopers</p>
+            <p>CareersCookiesAdChoicesTermsHelpContact uploading and non-usersSettingsActivity log</p>
+            <p></p>
+            <p>Meta © 2025  </p>
+        </div>
+      </footer>
     </div>
-
-
-
 
     <script src="script.js"></script>
   </body>
