--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Facebook - login or sign up</title>
-    <link rel="icon" href="https://www.facebook.com/images/fb_icon_325x325.png"/>
+    <link
+      rel="icon"
+      href="https://www.facebook.com/images/fb_icon_325x325.png"
+    />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -46,26 +49,27 @@
       </div>
       <footer>
         <div class="footer-container">
-          <p>English (UK) 
-            മലയാളം 
-            தமிழ் 
-            ಕನ್ನಡ 
-            हिन्दी 
-            اردو 
-            বাংলা 
-            తెలుగు 
-            Español 
-            Português (Brasil) 
-            Français (France) 
-            </p><hr>
-            <p>Sign UpLog inMessengerFacebook LiteVideoPlacesGamesMarketplaceMeta PayMeta StoreMeta QuestRay-Ban MetaMeta AI</p>
-            <p>InstagramThreadsFundraisersServicesVoting Information CentrePrivacy PolicyPrivacy CentreGroupsAboutCreate adCreate PageDevelopers</p>
-            <p>CareersCookiesAdChoicesTermsHelpContact uploading and non-usersSettingsActivity log</p>
-            <p></p>
-            <p>Meta © 2025  </p>
+          <p>
+            English (UK) മലയാളം தமிழ் ಕನ್ನಡ हिन्दी اردو বাংলা తెలుగు Español
+            Português (Brasil) Français (France)
+          </p>
+          <hr />
+          <p>
+            Sign UpLog inMessengerFacebook LiteVideoPlacesGamesMarketplaceMeta
+            PayMeta StoreMeta QuestRay-Ban MetaMeta AI
+          </p>
+          <p>
+            InstagramThreadsFundraisersServicesVoting Information CentrePrivacy
+            PolicyPrivacy CentreGroupsAboutCreate adCreate PageDevelopers
+          </p>
+          <p>
+            CareersCookiesAdChoicesTermsHelpContact uploading and
+            non-usersSettingsActivity log
+          </p>
+          <p></p>
+          <p>Meta © 2025</p>
         </div>
       </footer>
     </div>
-
   </body>
 </html>
