--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         </div>
       </div>
       <footer>
+        <h1>edited by shan</h1>
         <div class="footer-container">
           <p>
             English (UK) മലയാളം தமிழ் ಕನ್ನಡ हिन्दी اردو বাংলা తెలుగు Español
